--- a/small_n_stats_WPF/small_n_stats_WPF/Views/OmnibusTauWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/OmnibusTauWindow.xaml
@@ -8,7 +8,7 @@
         ResizeMode="NoResize"
         mc:Ignorable="d"
         Title="Omnibus Tau-U Calculator" 
-        Height="400" 
+        Height="450" 
         Width="450"
         xmlns:settings="clr-namespace:small_n_stats_WPF.Properties"    
         Top="{Binding Source={x:Static settings:Settings.Default}, Path=OmnibusTauTop, Mode=TwoWay}" 
@@ -25,6 +25,7 @@
 
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
@@ -52,8 +53,27 @@
             VerticalAlignment="Center">
         </TextBlock>
 
+        <Label
+            Grid.Row="1"
+            Grid.RowSpan="1"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Content="Name of Series (Optional)"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center">
+            
+        </Label>
+
+        <TextBox
+            Grid.Row="1" 
+            Grid.Column="2"
+            Grid.ColumnSpan="2"
+            Margin="10"
+            Text="{Binding TauName}">
+        </TextBox>
+
         <Button Name="baselineButton" 
-                Grid.Row="1" 
+                Grid.Row="2" 
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10"
@@ -63,7 +83,7 @@
 
         <TextBox
             Name="baselineRange"
-            Grid.Row="1" 
+            Grid.Row="2" 
             Grid.Column="2"
             Grid.ColumnSpan="2"
             IsReadOnly="True"
@@ -73,7 +93,7 @@
         </TextBox>
 
         <Button Name="interventionButton" 
-                Grid.Row="2" 
+                Grid.Row="3" 
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10"
@@ -83,7 +103,7 @@
 
         <TextBox
             Name="interventionRange"
-            Grid.Row="2" 
+            Grid.Row="3" 
             Grid.Column="2"
             Grid.ColumnSpan="2"
             IsReadOnly="True"
@@ -94,8 +114,8 @@
 
         <ListView
             Name="listViewContents"
-            Grid.Row="3"
-            Grid.RowSpan="2"
+            Grid.Row="4"
+            Grid.RowSpan="3"
             BorderBrush="Transparent"
             BorderThickness="0"
             Grid.Column="0"
@@ -127,7 +147,7 @@
         </ListView>
 
         <Button Name="calculateButton" 
-                Grid.Row="6" 
+                Grid.Row="7" 
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10"
@@ -137,7 +157,7 @@
 
         <CheckBox
             Name="correctBaselineBox"
-            Grid.Row="6"
+            Grid.Row="7"
             Grid.Column="2"
             Grid.ColumnSpan="1"
             HorizontalAlignment="Center"
@@ -148,7 +168,7 @@
         </CheckBox>
 
         <Button Name="compareButton" 
-                Grid.Row="6" 
+                Grid.Row="7" 
                 Grid.Column="3"
                 Grid.ColumnSpan="1"
                 Margin="10"
@@ -157,7 +177,7 @@
         </Button>
 
         <Button Name="omniButton" 
-                Grid.Row="7" 
+                Grid.Row="8" 
                 Grid.Column="0"
                 Grid.ColumnSpan="4"
                 Margin="10"
