--- a/small_n_stats_WPF/small_n_stats_WPF/Views/NAPWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/NAPWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:local="clr-namespace:small_n_stats_WPF"
         mc:Ignorable="d"
+        Icon="/Images/applications-science.png"
         Title="NAP/ROC Scoring" 
         Height="350" 
         ResizeMode="NoResize"
