--- a/small_n_stats_WPF/small_n_stats_WPF/Views/TheilSenWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/TheilSenWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:local="clr-namespace:small_n_stats_WPF"
         ResizeMode="NoResize"
         mc:Ignorable="d"
+        Icon="/Images/applications-science.png"
         Title="Theil-Sen Slope Estimator" 
         Height="350" 
         Width="300"
