--- a/small_n_stats_WPF/small_n_stats_WPF/Views/NonOverlapWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/NonOverlapWindow.xaml
@@ -9,7 +9,7 @@
         Icon="/Images/applications-science.png"
         mc:Ignorable="d"
         Title="Non-Overlap Indexer" 
-        Height="400" 
+        Height="450" 
         Width="450"
         xmlns:settings="clr-namespace:small_n_stats_WPF.Properties"    
         Top="{Binding Source={x:Static settings:Settings.Default}, Path=NonOverlapTop, Mode=TwoWay}" 
@@ -32,7 +32,8 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="60"></RowDefinition>
+            <RowDefinition Height="60"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
 
@@ -53,12 +54,14 @@
             VerticalAlignment="Center">
         </TextBlock>
 
+        <!-- Data Controls -->
+
         <Button Name="baselineButton" 
                 Grid.Row="1" 
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10"
-                Content="Baseline"
+                Content="Select Baseline Points"
                 Command="{Binding LoadBaselineDataCommand}">
         </Button>
 
@@ -69,8 +72,11 @@
             Grid.ColumnSpan="2"
             IsReadOnly="True"
             Margin="10"
-            Text="{Binding BaselineRangeString}"
-            Background="{Binding BaselineBackGround}">
+            Focusable="False"
+            AcceptsTab="False"
+            ToolTip="Click button to select baseline points"
+            Background="{Binding BaselineBackGround}"
+            Text="{Binding BaselineRangeString}">
         </TextBox>
 
         <Button Name="interventionButton" 
@@ -78,7 +84,7 @@
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10"
-                Content="Intervention"
+                Content="Select Intervention Points"
                 Command="{Binding LoadInterventionDataCommand}">
         </Button>
 
@@ -89,8 +95,11 @@
             Grid.ColumnSpan="2"
             IsReadOnly="True"
             Margin="10"
-            Text="{Binding InterventionRangeString}"
-            Background="{Binding InterventionBackGround}">
+            Focusable="False"
+            AcceptsTab="False"
+            ToolTip="Click button to select intervention points"
+            Background="{Binding InterventionBackGround}"
+            Text="{Binding InterventionRangeString}">
         </TextBox>
 
         <StackPanel
@@ -140,8 +149,8 @@
 
         <StackPanel
             Orientation="Horizontal"
-            Grid.Row="6"
-            Grid.Column="0"
+            Grid.Row="3"
+            Grid.Column="2"
             Grid.ColumnSpan="2"
             VerticalAlignment="Center"
             HorizontalAlignment="Right">
@@ -155,7 +164,7 @@
 
         <StackPanel
             Orientation="Horizontal"
-            Grid.Row="3"
+            Grid.Row="4"
             Grid.Column="2"
             Grid.ColumnSpan="2"
             VerticalAlignment="Center"
@@ -168,8 +177,34 @@
             </CheckBox>
         </StackPanel>
 
+        <FlowDocumentScrollViewer
+            Grid.Column="0"
+            Grid.ColumnSpan="4"
+            Grid.Row="6"
+            Grid.RowSpan="2"
+            IsSelectionEnabled="False"
+            VerticalScrollBarVisibility="Hidden">
+            <FlowDocument>
+                <FlowDocument.Resources>
+                    <Style TargetType="{x:Type Paragraph}">
+                        <Setter Property="Margin" Value="0"/>
+                        <Setter Property="Padding" Value="0"/>
+                    </Style>
+                </FlowDocument.Resources>
+                <Paragraph FontSize="12" FontFamily="Segoe UI">
+                    <Bold>Directions:</Bold>
+                </Paragraph>
+                <Paragraph FontSize="12" FontFamily="Segoe UI" Padding="0,5,0,0">
+                    A range of non-overlap calculations can be applied to data by selecting 
+                    ranges of baseline data points (Vertical data, top to bottom) and 
+                    intervention data points (Vertical data, top to bottom).  Multiple types
+                    of calculations can be selected simultaneously.
+                </Paragraph>
+            </FlowDocument>
+        </FlowDocumentScrollViewer>
+
         <Button Name="calculateButton" 
-                Grid.Row="7" 
+                Grid.Row="8" 
                 Grid.Column="0"
                 Grid.ColumnSpan="4"
                 Margin="10"
