--- a/small_n_stats_WPF/small_n_stats_WPF/Views/OmnibusTauWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/OmnibusTauWindow.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         Icon="/Images/applications-science.png"
         Title="Omnibus Tau-U Calculator" 
-        Height="450" 
+        Height="600" 
         Width="450"
         xmlns:settings="clr-namespace:small_n_stats_WPF.Properties"    
         Top="{Binding Source={x:Static settings:Settings.Default}, Path=OmnibusTauTop, Mode=TwoWay}" 
@@ -33,6 +33,8 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="80"></RowDefinition>
+            <RowDefinition Height="80"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
@@ -59,7 +61,7 @@
             Grid.RowSpan="1"
             Grid.Column="0"
             Grid.ColumnSpan="2"
-            Content="Name of Series (Optional)"
+            Content="Name of Series (for charting)"
             HorizontalAlignment="Center"
             VerticalAlignment="Center">
             
@@ -78,7 +80,7 @@
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10"
-                Content="Baseline"
+                Content="Select Baseline Points"
                 Command="{Binding LoadBaselineDataCommand}">
         </Button>
 
@@ -89,8 +91,11 @@
             Grid.ColumnSpan="2"
             IsReadOnly="True"
             Margin="10"
-            Text="{Binding BaselineRangeString}"
-            Background="{Binding BaselineBackGround}">
+            Focusable="False"
+            AcceptsTab="False"
+            ToolTip="Click button to select baseline points"
+            Background="{Binding BaselineBackGround}"
+            Text="{Binding BaselineRangeString}">
         </TextBox>
 
         <Button Name="interventionButton" 
@@ -98,7 +103,7 @@
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10"
-                Content="Intervention"
+                Content="Select Intervention Points"
                 Command="{Binding LoadInterventionDataCommand}">
         </Button>
 
@@ -109,8 +114,11 @@
             Grid.ColumnSpan="2"
             IsReadOnly="True"
             Margin="10"
-            Text="{Binding InterventionRangeString}"
-            Background="{Binding InterventionBackGround}">
+            Focusable="False"
+            AcceptsTab="False"
+            ToolTip="Click button to select intervention points"
+            Background="{Binding InterventionBackGround}"
+            Text="{Binding InterventionRangeString}">
         </TextBox>
 
         <ListView
@@ -147,8 +155,36 @@
             </ListView.ItemContainerStyle>
         </ListView>
 
+        <FlowDocumentScrollViewer
+            Grid.Column="0"
+            Grid.ColumnSpan="4"
+            Grid.Row="7"
+            Grid.RowSpan="2"
+            IsSelectionEnabled="False"
+            VerticalScrollBarVisibility="Hidden">
+            <FlowDocument>
+                <FlowDocument.Resources>
+                    <Style TargetType="{x:Type Paragraph}">
+                        <Setter Property="Margin" Value="0"/>
+                        <Setter Property="Padding" Value="0"/>
+                    </Style>
+                </FlowDocument.Resources>
+                <Paragraph FontSize="12" FontFamily="Segoe UI">
+                    <Bold>Directions:</Bold>
+                </Paragraph>
+                <Paragraph FontSize="12" FontFamily="Segoe UI" Padding="0,5,0,0">
+                    Tau-U can be calculated by selecting ranges of baseline data points (Vertical 
+                    data, top to bottom) and intervention data points (Vertical data, top to bottom).  
+                    Baseline data can be checked before calculating and corrections for monotocity in
+                    baseline can be performed prior to calculating.  Optionally, an omnibus effect size
+                    and Forest plot can be produced by selecting (control + click) multiple calculated 
+                    Tau-U series in this list view above.
+                </Paragraph>
+            </FlowDocument>
+        </FlowDocumentScrollViewer>
+
         <Button Name="calculateButton" 
-                Grid.Row="7" 
+                Grid.Row="9" 
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10"
@@ -158,7 +194,7 @@
 
         <CheckBox
             Name="correctBaselineBox"
-            Grid.Row="7"
+            Grid.Row="9"
             Grid.Column="2"
             Grid.ColumnSpan="1"
             HorizontalAlignment="Center"
@@ -169,7 +205,7 @@
         </CheckBox>
 
         <Button Name="compareButton" 
-                Grid.Row="7" 
+                Grid.Row="9" 
                 Grid.Column="3"
                 Grid.ColumnSpan="1"
                 Margin="10"
@@ -178,7 +214,7 @@
         </Button>
 
         <Button Name="omniButton" 
-                Grid.Row="8" 
+                Grid.Row="10" 
                 Grid.Column="0"
                 Grid.ColumnSpan="4"
                 Margin="10"
