--- a/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
@@ -148,8 +148,23 @@
                         <MenuItem.Icon>
                             <Image Source="/Images/text-x-preview.png" />
                         </MenuItem.Icon>
-                        <MenuItem Header="Reogrid Spreadsheet License">
-                            
+                        <MenuItem Header="Reogrid Spreadsheet License"
+                                  Command="{Binding ReogridLicenseWindowCommand}">
+                            <MenuItem.Icon>
+                                <Image Source="/Images/text-x-preview.png" />
+                            </MenuItem.Icon>
+                        </MenuItem>
+                        <MenuItem Header="GNOME Icon Theme"
+                                  Command="{Binding GnomeIconLicenseWindowCommand}">
+                            <MenuItem.Icon>
+                                <Image Source="/Images/text-x-preview.png" />
+                            </MenuItem.Icon>
+                        </MenuItem>
+                        <MenuItem Header="Ben Tilly's U Distribution License"
+                                  Command="{Binding TillyLicenseWindowCommand}">
+                            <MenuItem.Icon>
+                                <Image Source="/Images/text-x-preview.png" />
+                            </MenuItem.Icon>
                         </MenuItem>
                     </MenuItem>
                     <MenuItem Header="_Credits" 
